Bug 310069 - Konsole reads the .keytab files without respecting the local encoding, and that causes corrupted display when its description contains non-Latin characters.
Summary: Konsole reads the .keytab files without respecting the local encoding, and th...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9.3
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-14 04:29 UTC by Jekyll Wu
Modified: 2012-11-14 04:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments
corrupted description (61.21 KB, image/png)
2012-11-14 04:31 UTC, Jekyll Wu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jekyll Wu 2012-11-14 04:29:30 UTC
See https://git.reviewboard.kde.org/r/107286/ and the steps given below

Reproducible: Always

Steps to Reproduce:
1. $ cp /usr/share/apps/konsole/default.keytab ~/.kde4/share/apps/konsole/test.keytab
2. open test.keytab with vim, and change its description to:  keyboard "中文测试"
3. restart konsole, and see the corrupted description in the "keyboard" tab in the "Edit Profile" dialog.
Comment 1 Jekyll Wu 2012-11-14 04:31:13 UTC
Created attachment 75236 [details]
corrupted description
Comment 2 Jekyll Wu 2012-11-14 04:39:06 UTC
Git commit 95bae78c6a9cf2af5e74c0454f8661b4ea74159c by Jekyll Wu.
Committed on 14/11/2012 at 05:31.
Pushed by jekyllwu into branch 'master'.

Read .keytab files with respect to local encoding.

Thanks to Yichao Yu for the investigation and the patch.
FIXED-IN: 4.9.4

REVIEW: 107286

M  +2    -2    src/KeyboardTranslator.cpp

http://commits.kde.org/konsole/95bae78c6a9cf2af5e74c0454f8661b4ea74159c
Comment 3 Jekyll Wu 2012-11-14 04:50:47 UTC
Git commit 660220101a7c0516716c25f146ad11fcff6b0bd0 by Jekyll Wu.
Committed on 14/11/2012 at 05:31.
Pushed by jekyllwu into branch 'KDE/4.9'.

Read .keytab files with respect to local encoding.

Thanks to Yichao Yu for the investigation and the patch.
FIXED-IN: 4.9.4

REVIEW: 107286
(cherry picked from commit 95bae78c6a9cf2af5e74c0454f8661b4ea74159c)

M  +2    -2    src/KeyboardTranslator.cpp

http://commits.kde.org/konsole/660220101a7c0516716c25f146ad11fcff6b0bd0