Read .keytab files with respect to local encoding.

Thanks to Yichao Yu for the investigation and the patch.

BUG: 310069
FIXED-IN: 4.9.4

REVIEW: 107286